src/main/java/sw4/gen/jamlParser.java
package sw4.gen;
// Generated from C:/Users/Thomas Rusbjerg/IdeaProjects/SW4/src/main/antlr\jaml.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class jamlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TEMPO=1, TITLE=2, KEY=3, TIMESIGNATURE=4, INSTRUMENT=5, KEYVALUE=6, TONEVAL=7, 
		NOTEOCT=8, NOTELENGTH=9, NOTEOCTLENGTH=10, REST=11, RESTLENGTH=12, OCTAVESWITCH=13, 
		LENGTHSWITCH=14, VELOCITYSWITCH=15, INTLITERAL=16, STRING=17, COLON=18, 
		CHORDSLASH=19, LPAREN=20, RPAREN=21, ASSIGN=22, REPEAT=23, SHARP=24, FLAT=25, 
		TIE=26, DOT=27, OCTDOWN=28, OCTUP=29, ID=30, WS=31, NEWLINE=32, COMMENT=33;
	public static final int
		RULE_prog = 0, RULE_part = 1, RULE_assignment = 2, RULE_segment = 3, RULE_scorePart = 4, 
		RULE_note = 5, RULE_restNote = 6, RULE_toneVal = 7, RULE_noteOct = 8, 
		RULE_noteLength = 9, RULE_noteOctLength = 10, RULE_rest = 11, RULE_restLength = 12, 
		RULE_accidental = 13, RULE_dot = 14, RULE_expr = 15, RULE_chord = 16, 
		RULE_timeSignature = 17;
	public static final String[] ruleNames = {
		"prog", "part", "assignment", "segment", "scorePart", "note", "restNote", 
		"toneVal", "noteOct", "noteLength", "noteOctLength", "rest", "restLength", 
		"accidental", "dot", "expr", "chord", "timeSignature"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Tempo'", "'Title'", "'Key'", "'TimeSignature'", null, null, null, 
		null, null, null, "'r'", null, null, null, null, null, null, "':'", "'/'", 
		"'('", "')'", "'='", "'*'", "'+'", "'-'", "'_'", "'.'", "'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TEMPO", "TITLE", "KEY", "TIMESIGNATURE", "INSTRUMENT", "KEYVALUE", 
		"TONEVAL", "NOTEOCT", "NOTELENGTH", "NOTEOCTLENGTH", "REST", "RESTLENGTH", 
		"OCTAVESWITCH", "LENGTHSWITCH", "VELOCITYSWITCH", "INTLITERAL", "STRING", 
		"COLON", "CHORDSLASH", "LPAREN", "RPAREN", "ASSIGN", "REPEAT", "SHARP", 
		"FLAT", "TIE", "DOT", "OCTDOWN", "OCTUP", "ID", "WS", "NEWLINE", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "jaml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public jamlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(jamlParser.EOF, 0); }
		public List<PartContext> part() {
			return getRuleContexts(PartContext.class);
		}
		public PartContext part(int i) {
			return getRuleContext(PartContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEMPO) | (1L << TITLE) | (1L << KEY) | (1L << TIMESIGNATURE) | (1L << INSTRUMENT) | (1L << TONEVAL) | (1L << NOTEOCT) | (1L << NOTELENGTH) | (1L << NOTEOCTLENGTH) | (1L << REST) | (1L << RESTLENGTH) | (1L << OCTAVESWITCH) | (1L << LENGTHSWITCH) | (1L << VELOCITYSWITCH) | (1L << LPAREN) | (1L << OCTDOWN) | (1L << OCTUP) | (1L << ID))) != 0)) {
				{
				{
				setState(36);
				part();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ScorePartContext scorePart() {
			return getRuleContext(ScorePartContext.class,0);
		}
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_part);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				scorePart();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TitleAssContext extends AssignmentContext {
		public Token left;
		public Token right;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public TerminalNode TITLE() { return getToken(jamlParser.TITLE, 0); }
		public TerminalNode STRING() { return getToken(jamlParser.STRING, 0); }
		public TitleAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitTitleAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TimeSignatureAssContext extends AssignmentContext {
		public Token left;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public TimeSignatureContext timeSignature() {
			return getRuleContext(TimeSignatureContext.class,0);
		}
		public TerminalNode TIMESIGNATURE() { return getToken(jamlParser.TIMESIGNATURE, 0); }
		public TimeSignatureAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitTimeSignatureAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SegmentAssContext extends AssignmentContext {
		public Token left;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public SegmentContext segment() {
			return getRuleContext(SegmentContext.class,0);
		}
		public TerminalNode ID() { return getToken(jamlParser.ID, 0); }
		public SegmentAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitSegmentAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrumentAssContext extends AssignmentContext {
		public Token instr;
		public TerminalNode COLON() { return getToken(jamlParser.COLON, 0); }
		public TerminalNode INSTRUMENT() { return getToken(jamlParser.INSTRUMENT, 0); }
		public InstrumentAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitInstrumentAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TempoAssContext extends AssignmentContext {
		public Token left;
		public Token right;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public TerminalNode TEMPO() { return getToken(jamlParser.TEMPO, 0); }
		public TerminalNode INTLITERAL() { return getToken(jamlParser.INTLITERAL, 0); }
		public TempoAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitTempoAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ChordAssContext extends AssignmentContext {
		public Token left;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public ChordContext chord() {
			return getRuleContext(ChordContext.class,0);
		}
		public TerminalNode ID() { return getToken(jamlParser.ID, 0); }
		public ChordAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitChordAss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class KeyAssContext extends AssignmentContext {
		public Token left;
		public Token right;
		public TerminalNode ASSIGN() { return getToken(jamlParser.ASSIGN, 0); }
		public TerminalNode KEY() { return getToken(jamlParser.KEY, 0); }
		public TerminalNode KEYVALUE() { return getToken(jamlParser.KEYVALUE, 0); }
		public KeyAssContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitKeyAss(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SegmentAssContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				((SegmentAssContext)_localctx).left = match(ID);
				setState(49);
				match(ASSIGN);
				setState(50);
				segment();
				}
				break;
			case 2:
				_localctx = new ChordAssContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				((ChordAssContext)_localctx).left = match(ID);
				setState(52);
				match(ASSIGN);
				setState(53);
				chord();
				}
				break;
			case 3:
				_localctx = new TitleAssContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				((TitleAssContext)_localctx).left = match(TITLE);
				setState(55);
				match(ASSIGN);
				setState(56);
				((TitleAssContext)_localctx).right = match(STRING);
				}
				break;
			case 4:
				_localctx = new KeyAssContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				((KeyAssContext)_localctx).left = match(KEY);
				setState(58);
				match(ASSIGN);
				setState(59);
				((KeyAssContext)_localctx).right = match(KEYVALUE);
				}
				break;
			case 5:
				_localctx = new TempoAssContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				((TempoAssContext)_localctx).left = match(TEMPO);
				setState(61);
				match(ASSIGN);
				setState(62);
				((TempoAssContext)_localctx).right = match(INTLITERAL);
				}
				break;
			case 6:
				_localctx = new TimeSignatureAssContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(63);
				((TimeSignatureAssContext)_localctx).left = match(TIMESIGNATURE);
				setState(64);
				match(ASSIGN);
				setState(65);
				timeSignature();
				}
				break;
			case 7:
				_localctx = new InstrumentAssContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				((InstrumentAssContext)_localctx).instr = match(INSTRUMENT);
				setState(67);
				match(COLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(jamlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(jamlParser.RPAREN, 0); }
		public List<ScorePartContext> scorePart() {
			return getRuleContexts(ScorePartContext.class);
		}
		public ScorePartContext scorePart(int i) {
			return getRuleContext(ScorePartContext.class,i);
		}
		public List<AccidentalContext> accidental() {
			return getRuleContexts(AccidentalContext.class);
		}
		public AccidentalContext accidental(int i) {
			return getRuleContext(AccidentalContext.class,i);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitSegment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_segment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(LPAREN);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TONEVAL) | (1L << NOTEOCT) | (1L << NOTELENGTH) | (1L << NOTEOCTLENGTH) | (1L << REST) | (1L << RESTLENGTH) | (1L << OCTAVESWITCH) | (1L << LENGTHSWITCH) | (1L << VELOCITYSWITCH) | (1L << LPAREN) | (1L << OCTDOWN) | (1L << OCTUP) | (1L << ID))) != 0)) {
				{
				{
				setState(71);
				scorePart();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(RPAREN);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP || _la==FLAT) {
				{
				{
				setState(78);
				accidental();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScorePartContext extends ParserRuleContext {
		public NoteContext note() {
			return getRuleContext(NoteContext.class,0);
		}
		public RestNoteContext restNote() {
			return getRuleContext(RestNoteContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ScorePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scorePart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitScorePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScorePartContext scorePart() throws RecognitionException {
		ScorePartContext _localctx = new ScorePartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scorePart);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				note();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				restNote();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteContext extends ParserRuleContext {
		public ToneValContext toneVal() {
			return getRuleContext(ToneValContext.class,0);
		}
		public NoteOctContext noteOct() {
			return getRuleContext(NoteOctContext.class,0);
		}
		public NoteLengthContext noteLength() {
			return getRuleContext(NoteLengthContext.class,0);
		}
		public NoteOctLengthContext noteOctLength() {
			return getRuleContext(NoteOctLengthContext.class,0);
		}
		public NoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitNote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NoteContext note() throws RecognitionException {
		NoteContext _localctx = new NoteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_note);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TONEVAL:
				{
				setState(89);
				toneVal();
				}
				break;
			case NOTEOCT:
				{
				setState(90);
				noteOct();
				}
				break;
			case NOTELENGTH:
				{
				setState(91);
				noteLength();
				}
				break;
			case NOTEOCTLENGTH:
				{
				setState(92);
				noteOctLength();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestNoteContext extends ParserRuleContext {
		public RestContext rest() {
			return getRuleContext(RestContext.class,0);
		}
		public RestLengthContext restLength() {
			return getRuleContext(RestLengthContext.class,0);
		}
		public RestNoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restNote; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitRestNote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RestNoteContext restNote() throws RecognitionException {
		RestNoteContext _localctx = new RestNoteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_restNote);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REST:
				{
				setState(95);
				rest();
				}
				break;
			case RESTLENGTH:
				{
				setState(96);
				restLength();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToneValContext extends ParserRuleContext {
		public TerminalNode TONEVAL() { return getToken(jamlParser.TONEVAL, 0); }
		public List<AccidentalContext> accidental() {
			return getRuleContexts(AccidentalContext.class);
		}
		public AccidentalContext accidental(int i) {
			return getRuleContext(AccidentalContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public ToneValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toneVal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitToneVal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToneValContext toneVal() throws RecognitionException {
		ToneValContext _localctx = new ToneValContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_toneVal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TONEVAL);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP || _la==FLAT) {
				{
				{
				setState(100);
				accidental();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(106);
				dot();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteOctContext extends ParserRuleContext {
		public TerminalNode NOTEOCT() { return getToken(jamlParser.NOTEOCT, 0); }
		public List<AccidentalContext> accidental() {
			return getRuleContexts(AccidentalContext.class);
		}
		public AccidentalContext accidental(int i) {
			return getRuleContext(AccidentalContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public NoteOctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteOct; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitNoteOct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NoteOctContext noteOct() throws RecognitionException {
		NoteOctContext _localctx = new NoteOctContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_noteOct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(NOTEOCT);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP || _la==FLAT) {
				{
				{
				setState(113);
				accidental();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(119);
				dot();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteLengthContext extends ParserRuleContext {
		public TerminalNode NOTELENGTH() { return getToken(jamlParser.NOTELENGTH, 0); }
		public List<AccidentalContext> accidental() {
			return getRuleContexts(AccidentalContext.class);
		}
		public AccidentalContext accidental(int i) {
			return getRuleContext(AccidentalContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public NoteLengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteLength; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitNoteLength(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NoteLengthContext noteLength() throws RecognitionException {
		NoteLengthContext _localctx = new NoteLengthContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_noteLength);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(NOTELENGTH);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP || _la==FLAT) {
				{
				{
				setState(126);
				accidental();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(132);
				dot();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoteOctLengthContext extends ParserRuleContext {
		public TerminalNode NOTEOCTLENGTH() { return getToken(jamlParser.NOTEOCTLENGTH, 0); }
		public List<AccidentalContext> accidental() {
			return getRuleContexts(AccidentalContext.class);
		}
		public AccidentalContext accidental(int i) {
			return getRuleContext(AccidentalContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public NoteOctLengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteOctLength; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof jamlVisitor ) return ((jamlVisitor<? extends T>)visitor).visitNoteOctLength(this);
			else return visitor.visitChildren(this);
		}
	}
